--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>APIO 2020 Hosted by Indonesia</h1>
 
 <p>Coming soon!</p>
+
+<p>For inquiries, please mail to <a href="mailto:info@toki.id">info@toki.id</a>.</p>
