Add initial website skeleton

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<h1>APIO 2020 Hosted by Indonesia</h1>
+---
+layout: content-with-sidebar
+key: news
+---
 
-<p>Coming soon!</p>
-
-<p>For inquiries, please mail to <a href="mailto:info@toki.id">info@toki.id</a>.</p>
+<div>
+  <div class="pt-card card__title">
+    <h3 class="card__title__text">Welcome</h3>
+    <p class="card__title__right">25 January 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>Welcome to the official website of APIO 2020!</p>
+    <p>
+      This feed will be updated with news about APIO 2020.
+    </p>
+  </div>
+</div>
