--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@ key: news
 
 <div>
   <div class="pt-card card__title">
-    <h3 class="card__title__text">Welcome</h3>
-    <p class="card__title__right">26 January 2020</p>
+    <h3 class="card__title__text">APIO 2020 Call for Tasks</h3>
+    <p class="card__title__right">4 February 2020</p>
   </div>
   <div class="pt-card card__content">
-    <p>APIO 2020 Call for Tasks</p>
     <p>
       We are looking for tasks for APIO 2020.
-      Proposals for tasks will be accepted up until Sunday, March 8, 2020. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
+      Proposals for tasks will be accepted up until Sunday, March 15, 2020. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
     </p>
   </div>
   <div class="pt-card card__title">
