Address fushar@'s comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ key: news
   <div class="pt-card card__content">
     <p>
       We are looking for tasks for APIO 2020.
-      Proposals for tasks will be accepted up until Sunday, March 15, 2020. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
+      Proposals for tasks will be accepted until <strong>Sunday, March 15, 2020</strong>. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
     </p>
   </div>
   <div class="pt-card card__title">
