--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">APIO 2020 Call for Tasks</h3>
+    <p class="card__title__right">4 February 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      We are looking for tasks for APIO 2020.
+      Proposals for tasks will be accepted until <strong>Sunday, March 15, 2020</strong>. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
+    </p>
+  </div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Welcome</h3>
     <p class="card__title__right">25 January 2020</p>
   </div>
