--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">APIO 2020 registration, schedule, rules, and onsite competition</h3>
+    <p class="card__title__right">6 February 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      We have added several pages in the website, including <a href="/registration">registration</a>, <a href="/schedule">schedule</a>, <a href="/rules">rules</a>, and <a href="/onsite">onsite competition</a>. Please do check them.
+    </p>
+  </div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 Call for Tasks</h3>
     <p class="card__title__right">4 February 2020</p>
   </div>
