--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">APIO 2020 Competition rules</h3>
+    <p class="card__title__right">16 February 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      We have added APIO 2020 <a href="/rules">competition rules</a> and renamed the previous rules page to <a href="/regulation">Regulation</a> instead.
+      Delegation Leaders have the responsibility of ensuring that all members of their delegation fully understand these competition rules and abide by them.
+    </p>
+  </div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 registration, schedule, rules, and onsite competition</h3>
     <p class="card__title__right">6 February 2020</p>
   </div>
