Cancel APIO 2020 onsite

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@ key: news
 
 <div>
   <div class="pt-card card__title">
-    <h3 class="card__title__text">APIO 2020 Competition rules</h3>
+    <h3 class="card__title__text">APIO 2020 Onsite Cancellation</h3>
+    <p class="card__title__right">15 March 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      Given the current situation pertaining to the COVID-19 outbreak, we regret to inform you that there will be <b><u>no onsite contest</u></b> option for APIO 2020.
+    </p>
+    <p>
+      Having said that, Indonesia is still on track to host the contest with the online format that we used to have. We will keep you updated if there is any changes. If you have any questions, do not hesitate to contact <a href="mailto:info.apio2020@toki.id">info.apio2020@toki.id</a>.
+    </p>
+  </div>
+  <div class="pt-card card__title">
+    <h3 class="card__title__text">APIO 2020 Competition Rules</h3>
     <p class="card__title__right">16 February 2020</p>
   </div>
   <div class="pt-card card__content">
