Deprecate any information regarding onsite contest

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ key: news
   </div>
   <div class="pt-card card__content">
     <p>
-      Given the current situation pertaining to the COVID-19 outbreak, we regret to inform you that there will be <b><u>no onsite contest</u></b> option for APIO 2020.
+      Given the current situation pertaining to the COVID-19 outbreak, we regret to inform you that there will be <b><u>no onsite contest</u></b> option for APIO 2020. We also have removed any information related to the onsite contest from the website.
     </p>
     <p>
       Having said that, Indonesia is still on track to host the contest with the online format that we used to have. We will keep you updated if there is any changes. If you have any questions, do not hesitate to contact <a href="mailto:info.apio2020@toki.id">info.apio2020@toki.id</a>.
