Add covid/ page and necessary changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Changes due to COVID-19 pandemic</h3>
+    <p class="card__title__right">8 April 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      Given the current situation pertaining to the COVID-19 pandemic, we are postponing APIO 2020 to <b>15 - 16 August 2020</b>. Also, it is not mandatory for participants to take the contest at an official contest site.
+    </p>
+    <p>
+      You can check our page regarding <a href="/covid">changes due to COVID-19 pandemic</a> to see the complete email sent to the delegation leaders containing the reason behind the decision as well. If you have any questions, do not hesitate to contact <a href="mailto:info.apio2020@toki.id">info.apio2020@toki.id</a>.
+    </p>
+  </div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 Onsite Cancellation</h3>
     <p class="card__title__right">15 March 2020</p>
   </div>
