Add 'Submission and Access' rules and cleanups

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Updated rules</h3>
+    <p class="card__title__right">24 May 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      A new section "Submission and Access" is added to the competition rules. Since it is not mandatory for participants to take the contest at an official contest site, APIO 2020 committee has also modified what resources can the contestants use, submit, and access during the competition.
+  </div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Complete schedule</h3>
     <p class="card__title__right">9 May 2020</p>
   </div>
