Address fushar@'s comments

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ key: news
   </div>
   <div class="pt-card card__content">
     <p>
-      A new section "Submission and Access" is added to the competition rules. Since it is not mandatory for participants to take the contest at an official contest site, APIO 2020 committee has also modified what resources can the contestants use, submit, and access during the competition.
+      A new section "Submission and Access" is added to the competition rules. Since it is not mandatory for participants to take the contest at an official contest site, APIO 2020 committee has also modified what resources the contestants can use, submit, and access during the competition.
   </div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">Complete schedule</h3>
