--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">APIO 2020 Open Contest</h3>
+    <p class="card__title__right">22 July 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      Information regarding APIO 2020 Open Contest has been published in the
+      <a href="open">Open Contest</a> page.
+  </div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Updated rules</h3>
     <p class="card__title__right">24 May 2020</p>
   </div>
