Add technical specification page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Technical Specification</h3>
+    <p class="card__title__right">2 August 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      Information regarding technical specification of the grader system has been published in the
+      <a href="spec">Technical Specification</a> page.
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 Open Contest</h3>
     <p class="card__title__right">22 July 2020</p>
   </div>
@@ -13,6 +25,9 @@ key: news
       Information regarding APIO 2020 Open Contest has been published in the
       <a href="open">Open Contest</a> page.
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">Updated rules</h3>
     <p class="card__title__right">24 May 2020</p>
@@ -21,6 +36,9 @@ key: news
     <p>
       A new section "Submission and Access" is added to the competition rules. Since it is not mandatory for participants to take the contest at an official contest site, APIO 2020 committee has also modified what resources the contestants can use, submit, and access during the competition.
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">Complete schedule</h3>
     <p class="card__title__right">9 May 2020</p>
@@ -29,6 +47,9 @@ key: news
     <p>
       The complete schedule containing the practice session, task translation, appeal, open contest, and result announcement has been announced in the <a href="schedule">schedule</a> page.
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">Changes due to COVID-19 pandemic</h3>
     <p class="card__title__right">8 April 2020</p>
@@ -41,6 +62,9 @@ key: news
       You can check our page regarding <a href="/covid">changes due to COVID-19 pandemic</a> to see the complete email sent to the delegation leaders containing the reason behind the decision as well. If you have any questions, do not hesitate to contact <a href="mailto:info.apio2020@toki.id">info.apio2020@toki.id</a>.
     </p>
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 Onsite Cancellation</h3>
     <p class="card__title__right">15 March 2020</p>
@@ -53,6 +77,9 @@ key: news
       Having said that, Indonesia is still on track to host the contest with the online format that we used to have. We will keep you updated if there is any changes. If you have any questions, do not hesitate to contact <a href="mailto:info.apio2020@toki.id">info.apio2020@toki.id</a>.
     </p>
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 Competition Rules</h3>
     <p class="card__title__right">16 February 2020</p>
@@ -63,6 +90,9 @@ key: news
       Delegation Leaders have the responsibility of ensuring that all members of their delegation fully understand these competition rules and abide by them.
     </p>
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 registration, schedule, rules, and onsite competition</h3>
     <p class="card__title__right">6 February 2020</p>
@@ -72,6 +102,9 @@ key: news
       We have added several pages in the website, including <a href="/registration">registration</a>, <a href="/schedule">schedule</a>, <a href="/rules">rules</a>, and <a href="/onsite">onsite competition</a>. Please do check them.
     </p>
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">APIO 2020 Call for Tasks</h3>
     <p class="card__title__right">4 February 2020</p>
@@ -82,6 +115,9 @@ key: news
       Proposals for tasks will be accepted until <strong>Sunday, March 15, 2020</strong>. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
     </p>
   </div>
+</div>
+
+<div>
   <div class="pt-card card__title">
     <h3 class="card__title__text">Welcome</h3>
     <p class="card__title__right">25 January 2020</p>
