Add practice session news

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Practice Session</h3>
+    <p class="card__title__right">8 August 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      The practice session of APIO 2020 has just started and will last until Friday, 14 August 2020.
+      We have distributed the accounts of the contestants to the delegation leaders. If you have
+      not received your account information, please contact your respective leader.
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Technical Specification</h3>
     <p class="card__title__right">2 August 2020</p>
   </div>
