--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">Our Social Media #APIO2020</h3>
+    <p class="card__title__right">12 August 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      We want to invite you to follow our social media account to get latest APIO 2020 information.
+    </p>
+    <ul>
+      <li>Instagram: <a href="https://www.instagram.com/toki_id/">https://www.instagram.com/toki_id/</a></li>
+      <li>Twitter: <a href="https://twitter.com/toki_id">https://twitter.com/toki_id</a></li>
+      <li>Facebook Page: <a href="https://www.facebook.com/toki.id">https://www.facebook.com/toki.id</a></li>
+    </ul>
+    <p>
+      And if you have any photo, commentary regarding APIO 2020, please tag us in the respective account and add hashtag #APIO2020,
+      so we could search it easily!
+    </p>
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Practice Session</h3>
     <p class="card__title__right">8 August 2020</p>
   </div>
