--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ key: news
   <div class="pt-card card__content">
     <p>
       To celebrate the festivity APIO 2020, please join us in APIO 2020 Opening Ceremony.
-      The ceremony will be held as virtual event on Youtube on Friday, 14 August 2020 at 19:00.
-      Please set the reminder so we could attend it together. See you there!
+      The ceremony will be held as a virtual event on Youtube on Friday, 14 August 2020 at 19:00.
+      Please set a reminder so we could attend it together. See you there!
     </p>
     <p>
       This is the link to the opening ceremony: <a href="https://www.youtube.com/watch?v=PJ9ZJaeMgs8">https://www.youtube.com/watch?v=PJ9ZJaeMgs8</a>
