--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ key: news
   <div class="pt-card card__content">
     <p>
       To celebrate the festivity APIO 2020, please join us in APIO 2020 Opening Ceremony.
-      The ceremony will be held as a virtual event on Youtube on Friday, 14 August 2020 at 19:00.
+      The ceremony will be held as a virtual event on Youtube on Friday, 14 August 2020 at 19:00 (UTC+7).
       Please set a reminder so we could attend it together. See you there!
     </p>
     <p>
