--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@ key: news
       To celebrate the festivity APIO 2020, please join us in APIO 2020 Opening Ceremony.
       The ceremony will be held as a virtual event on Youtube on Friday, 14 August 2020 at 19:00 (UTC+7).
       Please set a reminder so we could attend it together. See you there!
-    </p>
-    <p>
-      This is the link to the opening ceremony: <a href="https://www.youtube.com/watch?v=PJ9ZJaeMgs8">https://www.youtube.com/watch?v=PJ9ZJaeMgs8</a>
+      This is the link to the opening ceremony: <a href="https://www.youtube.com/watch?v=PJ9ZJaeMgs8">Youtube</a>
     </p>
   </div>
 </div>
