--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ key: news
   <div class="pt-card card__content">
     <p>
       To celebrate the festivity APIO 2020, please join us in APIO 2020 Opening Ceremony.
-      The ceremony will be held as a virtual event on Youtube on Friday, 14 August 2020 at 19:00 (UTC+7).
+      The ceremony will be held as <a href="https://www.youtube.com/watch?v=PJ9ZJaeMgs8">a virtual event on Youtube</a> on Friday, 14 August 2020 at 19:00 (UTC+7).
       Please set a reminder so we could attend it together. See you there!
-      This is the link to the opening ceremony: <a href="https://www.youtube.com/watch?v=PJ9ZJaeMgs8">Youtube</a>
     </p>
   </div>
 </div>
