--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@ key: news
 
 <div>
   <div class="pt-card card__title">
+    <h3 class="card__title__text">APIO 2020 Opening Ceremony</h3>
+    <p class="card__title__right">14 August 2020</p>
+  </div>
+  <div class="pt-card card__content">
+    <p>
+      To celebrate the festivity APIO 2020, please join us in APIO 2020 Opening Ceremony.
+      The ceremony will be held as <a href="https://www.youtube.com/watch?v=PJ9ZJaeMgs8">a virtual event on Youtube</a> on Friday, 14 August 2020 at 19:00 (UTC+7).
+      Please set a reminder so we could attend it together. See you there!
+    </p>
+  </div>
+</div>
+
+<div>
+  <div class="pt-card card__title">
     <h3 class="card__title__text">Our Social Media #APIO2020</h3>
     <p class="card__title__right">12 August 2020</p>
   </div>
