--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@ key: news
   </div>
   <div class="pt-card card__content">
     <p>
-      The <a href="tasks">tasks</a> and <a href="results">official results</a> of APIO 2020 has just been published.
-      Once again, we would like to congratulate all contestants and medalists.
-      See you in future APIOs.
+      The <a href="tasks">tasks</a>, <a href="results">official results</a>, and <a href="open-results">open contest results</a> of APIO 2020 have just been published.
+      We will distribute physical certificates to all official contestants and physical medals to all medalists.
+      We are still considering the method of the distribution.
+    </p><p>
+      Once again, we would like to congratulate all contestants and medalists. See you in future APIOs.
     </p>
   </div>
 </div>
