--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ key: news
 ---
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Results and Tasks</h3>
     <p class="card__title__right">21 August 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       The <a href="tasks">tasks</a>, <a href="results">official results</a>, and <a href="open-results">open contest results</a> of APIO 2020 have just been published.
       We will distribute physical certificates to all official contestants and physical medals to all medalists.
@@ -20,11 +20,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Closing Ceremony</h3>
     <p class="card__title__right">19 August 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       Now we are in the end of our event. Thank you for all participants that have taken the contest.
       Now we would like to invite you to join the <a href="/closing">Awarding Night or Closing Ceremony</a> on <b>Friday, 21 August 2020 at 19:00 (UTC+7)</b>.
@@ -34,11 +34,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Opening Ceremony</h3>
     <p class="card__title__right">14 August 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       To celebrate the festivity APIO 2020, please join us in APIO 2020 Opening Ceremony.
       The ceremony will be held as <a href="/opening">a virtual event on Youtube</a> on <b>Friday, 14 August 2020 at 19:00 (UTC+7)</b>.
@@ -48,11 +48,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Our Social Media #APIO2020</h3>
     <p class="card__title__right">12 August 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       We want to invite you to follow our social media account to get latest APIO 2020 information.
     </p>
@@ -69,11 +69,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Practice Session</h3>
     <p class="card__title__right">8 August 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       The practice session of APIO 2020 has just started and will last until Friday, 14 August 2020.
       We have distributed the accounts of the contestants to the delegation leaders. If you have
@@ -82,11 +82,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Technical Specification</h3>
     <p class="card__title__right">2 August 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       Information regarding technical specification of the grader system has been published in the
       <a href="spec">Technical Specification</a> page.
@@ -94,11 +94,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Open Contest</h3>
     <p class="card__title__right">22 July 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       Information regarding APIO 2020 Open Contest has been published in the
       <a href="open">Open Contest</a> page.
@@ -106,33 +106,33 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Updated rules</h3>
     <p class="card__title__right">24 May 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       A new section "Submission and Access" is added to the competition rules. Since it is not mandatory for participants to take the contest at an official contest site, APIO 2020 committee has also modified what resources the contestants can use, submit, and access during the competition.
   </div>
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Complete schedule</h3>
     <p class="card__title__right">9 May 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       The complete schedule containing the practice session, task translation, appeal, open contest, and result announcement has been announced in the <a href="schedule">schedule</a> page.
   </div>
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Changes due to COVID-19 pandemic</h3>
     <p class="card__title__right">8 April 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       Given the current situation pertaining to the COVID-19 pandemic, we are postponing APIO 2020 to <b>15 - 16 August 2020</b>. Also, it is not mandatory for participants to take the contest at an official contest site.
     </p>
@@ -143,11 +143,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Onsite Cancellation</h3>
     <p class="card__title__right">15 March 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       Given the current situation pertaining to the COVID-19 outbreak, we regret to inform you that there will be <b><u>no onsite contest</u></b> option for APIO 2020. We also have removed any information related to the onsite contest from the website.
     </p>
@@ -158,11 +158,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Competition Rules</h3>
     <p class="card__title__right">16 February 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       We have added APIO 2020 <a href="/rules">competition rules</a> and renamed the previous rules page to <a href="/regulation">Regulation</a> instead.
       Delegation Leaders have the responsibility of ensuring that all members of their delegation fully understand these competition rules and abide by them.
@@ -171,11 +171,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 registration, schedule, rules, and onsite competition</h3>
     <p class="card__title__right">6 February 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       We have added several pages in the website, including <a href="/registration">registration</a>, <a href="/schedule">schedule</a>, <a href="/rules">rules</a>, and <a href="/onsite">onsite competition</a>. Please do check them.
     </p>
@@ -183,11 +183,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Call for Tasks</h3>
     <p class="card__title__right">4 February 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>
       We are looking for tasks for APIO 2020.
       Proposals for tasks will be accepted until <strong>Sunday, March 15, 2020</strong>. Other guidelines for proposals can be found at <a href="/call-for-tasks">Call for Tasks</a>.
@@ -196,11 +196,11 @@ key: news
 </div>
 
 <div>
-  <div class="pt-card card__title">
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">Welcome</h3>
     <p class="card__title__right">25 January 2020</p>
   </div>
-  <div class="pt-card card__content">
+  <div class="bp3-card card__content">
     <p>Welcome to the official website of APIO 2020!</p>
     <p>
       This feed will be updated with news about APIO 2020.
