--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ key: news
 
 <div>
   <div class="bp3-card card__title">
+    <h3 class="card__title__text">APIO 2020 Competition Report</h3>
+    <p class="card__title__right">20 May 2021</p>
+  </div>
+  <div class="bp3-card card__content">
+    <p>
+      The competition report is available in the <a href="report">Competition Report</a> page.
+    </p>
+  </div>
+</div>
+
+<div>
+  <div class="bp3-card card__title">
     <h3 class="card__title__text">APIO 2020 Results and Tasks</h3>
     <p class="card__title__right">21 August 2020</p>
   </div>
